# homelab-infra-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_provider.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
docs/: safety.md
examples/: .env.example  claude-code-config.json  docker-compose.yml
src/homelab_infra_mcp/: __init__.py  __main__.py  config.py  safety.py  server.py
src/homelab_infra_mcp/modules/: __init__.py  cross_domain.py  docker.py  docker_backends.py  home_assistant.py  npm.py
src/homelab_infra_mcp/modules/dns/: __init__.py  base.py  cloudflare.py
src/homelab_infra_mcp/utils/: formatting.py  validation.py
tests/: conftest.py  test_config.py  test_cross_domain.py  test_dns.py  test_docker.py  test_npm.py  test_safety.py  test_server.py  test_validation.py
