[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-infra-mcp"
version = "0.1.0"
description = "Unified MCP server for homelab infrastructure — Nginx Proxy Manager, Docker, and DNS management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Seaynic Labs", email = "support@seayniclabs.com"},
]
keywords = ["mcp", "homelab", "docker", "nginx-proxy-manager", "dns", "cloudflare"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/seayniclabs/homelab-infra-mcp"
Issues = "https://github.com/seayniclabs/homelab-infra-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_infra_mcp"]
